--- a/src/user-view.html
+++ b/src/user-view.html
@@ -9,8 +9,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 
 <link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="../bower_components/iron-icons/social-icons.html">
+<link rel="import" href="app-data.html">
 
-<dom-module id="my-view2">
+<dom-module id="user-view">
 
   <template>
 
@@ -46,10 +48,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </style>
 
     <div class="card">
-      <div class="circle">2</div>
-      <h1>View Two</h1>
-      <p>Ea duis bonorum nec, falli paulo aliquid ei eum.</p>
-      <p>Id nam odio natum malorum, tibique copiosae expetenda mel ea.Detracto suavitate repudiandae no eum. Id adhuc minim soluta nam.Id nam odio natum malorum, tibique copiosae expetenda mel ea.</p>
+      <div class="circle"><iron-icon icon="social:person"></iron-icon></div>
+      <h1>User</h1>
+
+      <app-data></app-data>
     </div>
 
   </template>
@@ -58,7 +60,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     Polymer({
 
-      is: 'my-view2'
+      is: 'user-view'
 
     });
 
