--- a/src/app-shell.html
+++ b/src/app-shell.html
@@ -105,7 +105,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         position: fixed;
         top: 64px;
         right: 64px;
-        bottom: 64px;
+        /*bottom: 64px;*/
         left: 64px;
         overflow: auto;
       }
@@ -128,7 +128,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         tail="{{subroute}}"></app-route>
 
     <paper-dialog id="accountDialog" entry-animation="fade-in-animation" exit-animation="fade-out-animation" with-backdrop>
-      <h1>User identification</h1>
       <app-data user="{{user}}"></app-data>
     </paper-dialog>
 
