saving users to firebase

--- a/src/app-shell.html
+++ b/src/app-shell.html
@@ -140,6 +140,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <a name="home" href="/">Home</a>
           <a name="user" href="/user">User</a>
           <a name="messages" href="/messages">Messages</a>
+          <a name="settings" href="/settings">Settings</a>
         </iron-selector>
       </app-drawer>
 
@@ -161,6 +162,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <home-view name="home"></home-view>
           <user-view name="user"></user-view>
           <messages-view name="messages"></messages-view>
+          <settings-view name="settings"></settings-view>
         </iron-pages>
 
       </app-header-layout>
