--- a/src/app-data.html
+++ b/src/app-data.html
@@ -86,34 +86,23 @@
       storageBucket="{{firebaseData.storageBucket}}">
     </firebase-app>
 
-    <!--firebase-document
-      path="/home/title"
-      data="{{homeTitle}}">
-    </firebase-document-->
-
     <firebase-auth id="auth" user="{{user}}" signedIn="{{signedIn}}" provider="google" on-error="_handleError"></firebase-auth>
+
+    <firebase-document
+      path="{{userPath}}"
+      data="{{userData}}">
+    </firebase-document>
 
     <div class="error" hidden$="{{!error}}">{{error.code}}: {{error.message}}</div>
 
     <div hidden$="{{user}}" class="user-data">
-      <!--h3>Email/Password</h3>
-      <form on-submit="signInWithEmailAndPassword">
-        <input value="{{email::input}}" type="email" placeholder="Email">
-        <input value="{{password::input}}" type="password" placeholder="Password">
-        <button type="submit" on-tap="signInWithEmailAndPassword">Sign In</button>
-        <button type="button" on-tap="createUserWithEmailAndPassword">Sign Up</button>
-      </form-->
-      <!--h3>Anonymous/OAuth</h3-->
       <paper-icon-button icon="account-circle"></paper-icon-button>
       <p><strong>User identification</strong><em>Log in to get access to the full site.</em></p>
-      <!--button on-tap="signInAnonymously">Sign In Anonymously</button-->
       <paper-button on-tap="_signInWithGoogle">Sign In With Google</paper-button>
     </div>
     <div hidden$="{{!user}}" class="user-data">
       <img src="{{user.photoURL}}" alt="{{user.displayName}}">
       <p><strong>{{user.displayName}}</strong><em>{{user.email}}</em></p>
-      <!--p>uid: {{user.uid}}</p>
-      <p>email verified: {{user.emailVerified}}</p-->
 
       <paper-button on-tap="_signOut">Sign Out</paper-button>
     </div>
@@ -131,6 +120,15 @@
           value: false
         },
         user: {
+          type: Object,
+          notify: true,
+          observer: '_computeUserData'
+        },
+        userPath: {
+          type: String,
+          notify: true
+        },
+        userData: {
           type: Object,
           notify: true
         },
@@ -155,28 +153,39 @@
         this.error = null;
         //this.auth = this.$.auth;
         this.$.auth.signInWithPopup()
-          .then(function(response) {console.log('login ok', response);})
-          .catch(function(error) {console.error('login error', error);});
-      },
-
-      _signInWithEmailAndPassword: function(e) {
-        if (e) { e.preventDefault(); }
-        this.error = null;
-        this.$.auth.signInWithEmailAndPassword(this.email, this.password);
-        this.email = null;
-        this.password = null;
-      },
-
-      _createUserWithEmailAndPassword: function() {
-        this.error = null;
-        this.$.auth.createUserWithEmailAndPassword(this.email, this.password);
-        this.email = null;
-        this.password = null;
+          .then(function(response) {console.log('login ok', response.user);})
+          .catch(function(error) {
+            // Handle Errors here.
+            var errorCode = error.code;
+            var errorMessage = error.message;
+            // The email of the user's account used.
+            var email = error.email;
+            // The firebase.auth.AuthCredential type that was used.
+            var credential = error.credential;
+            if (errorCode === 'auth/account-exists-with-different-credential') {
+              alert('You have already signed up with a different auth provider for that email.');
+              // If you are using multiple auth providers on your app you should handle linking
+              // the user's accounts here.
+            } else {
+              console.error(error);
+            }
+          });
       },
 
       _signOut: function() {
         this.error = null;
         this.$.auth.signOut();
+      },
+
+      _computeUserData(user, oldUser) {
+        if (user !== null) {
+          this.set('userPath', '/users/' + user.uid);
+          this.set('userData', {
+            "displayName": user.displayName,
+            "email": user.email,
+            "photoUrl" : user.photoURL
+          });
+        }
       }
 
     });
