--- a/src/app-data.html
+++ b/src/app-data.html
@@ -153,7 +153,7 @@
         this.error = null;
         //this.auth = this.$.auth;
         this.$.auth.signInWithPopup()
-          .then(function(response) {console.log('login ok', response.user);})
+          .then(function(response) {/* 'login ok' */})
           .catch(function(error) {
             // Handle Errors here.
             var errorCode = error.code;
