--- a/src/write-view.html
+++ b/src/write-view.html
@@ -1,18 +1,8 @@
-<!--
-@license
-Copyright (c) 2016 The Polymer Project Authors. All rights reserved.
-This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
-The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
-The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
-Code distributed by Google as part of the polymer project is also
-subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
--->
-
 <link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="../bower_components/iron-icons/social-icons.html">
-<link rel="import" href="app-data.html">
+<link rel="import" href="../bower_components/paper-input/paper-input.html">
+<link rel="import" href="../bower_components/paper-button/paper-button.html">
 
-<dom-module id="user-view">
+<dom-module id="write-view">
 
   <template>
 
@@ -47,11 +37,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
     </style>
 
-    <div class="card">
-      <div class="circle"><iron-icon icon="social:person"></iron-icon></div>
-      <h1>User</h1>
+    <firebase-document id="query">
+    </firebase-document>
 
-      <app-data></app-data>
+    <div class="card">
+      <h1>Write</h1>
+
+      <paper-input id="postTitle" label="Post title" value="{{postTitle}}"></paper-input>
+      <paper-button raised on-tap="_savePost">Save</paper-button>
     </div>
 
   </template>
@@ -60,7 +53,28 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     Polymer({
 
-      is: 'user-view'
+      is: 'write-view',
+
+      properties: {
+        postTitle: {
+          type: String,
+          notify: true
+        },
+        user: {
+          type: Object,
+          notify: true
+        }
+      },
+
+      _savePost: function() {
+        this.$.query.path = null;
+        this.$.query.data = {
+          title: this.postTitle,
+          author: this.user.displayName,
+          date: firebase.database.ServerValue.TIMESTAMP
+        };
+        this.$.query.save('/posts/');
+      }
 
     });
 
