--- a/src/app-shell.html
+++ b/src/app-shell.html
@@ -138,7 +138,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <app-toolbar>Menu</app-toolbar>
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
           <a name="home" href="/">Home</a>
-          <a name="write" href="/write">User</a>
+          <a name="write" href="/write">Write</a>
           <a name="messages" href="/messages">Messages</a>
           <a name="settings" href="/settings">Settings</a>
         </iron-selector>
